--- a/indexlogin.html
+++ b/indexlogin.html
@@ -21,7 +21,7 @@
                 <a href="https://www.linkedin.com"><img src="./img/linkedin (1).png" width="30px"></a>
             </div>
             <br>
-            <p>Ou use sua conta</p>
+            <p class="p-esquerdo">Ou use sua conta</p>
             <div class="formulario">
                 <form>
                     <input required type="email" placeholder="E-mail">
@@ -30,17 +30,23 @@
                     <input type="senha" placeholder="Senha">
                 </form>
                 <br>
-                <p>Esqueceu sua senha?</p>
-                <button class="entrar" type="button">Entrar</button>
+                <p class="senha">Esqueceu sua senha?</p>
+                <button class="entrar" type="button">ENTRAR</button>
+                <br>
+                <p class="ou">Ou</p>
+                <button class="cadastro" type="button">CADASTRE-SE</button>
+
             </div>
             
         </div>
 
         
         <div class="direito">
-            <h2>Olá</h2>
+            <h2>Olá!</h2>
+            <br>
             <p>Não possui cadastro ?</p>
-            <button type="button">Cadastre-se</button>
+            <br>
+            <button class="cadastro-botao" type="button">CADASTRE-SE</button>
         </div>
 
 
