--- a/indexcadastro.html
+++ b/indexcadastro.html
@@ -19,7 +19,7 @@
             
             <br>
             <div class="formulario">
-                <button class="login-botao" type="button">FAÇA SEU LOGIN</button>
+                <a href="file:///C:/Users/treinamento/Downloads/html-css-turma7/prova-front-7-isabella-botasso/indexcadastro.html"><button class="login-botao" type="button">FAÇA SEU LOGIN</button></a>
 
             </div>
             
@@ -36,16 +36,25 @@
             </div>
             <p>Ou use seu email para se cadastrar</p>
             <br>
-            <form>
+            <form class="form-cadastro">
                 <input required type="Nome" placeholder="Nome">
+                <br>
                 <input required type="email" placeholder="E-mail">
+                <br>
                 <input required type="CPF" placeholder="CPF">
+                <br>
                 <input required type="CEP" placeholder="CEP">
+                <br>
                 <input required type="rua" placeholder="Rua">
+                <br>
                 <input required type="numero" placeholder="n°">
+                <br>
                 <input required type="RG" placeholder="RG">
+                <br>
                 <input required type="senha" placeholder="Senha">
+                <br>
                 <input required type="confirmar-senha" placeholder="Confirmar Senha">
+                <br>
             </form>
             <button class="cadastro-botao" type="button">CADASTRAR</button>
         </div>
@@ -56,6 +65,6 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
