--- a/indexlogin.html
+++ b/indexlogin.html
@@ -34,7 +34,7 @@
                 <button class="entrar" type="button">ENTRAR</button>
                 <br>
                 <p class="ou">Ou</p>
-                <button class="cadastro" type="button">CADASTRE-SE</button>
+                <a href="file:///C:/Users/treinamento/Downloads/html-css-turma7/prova-front-7-isabella-botasso/indexcadastro.html"><button class="cadastro" type="button">CADASTRE-SE</button></a>
 
             </div>
             
