--- a/indexcadastro.html
+++ b/indexcadastro.html
@@ -37,7 +37,7 @@
             <p>Ou use seu email para se cadastrar</p>
             <br>
             <form class="form-cadastro">
-                <input required type="Nome" placeholder="Nome">
+                <input required type="Nome" placeholder="Nome" a>
                 <br>
                 <input required type="email" placeholder="E-mail">
                 <br>
