--- a/indexlogin.html
+++ b/indexlogin.html
@@ -24,10 +24,10 @@
             <p class="p-esquerdo">Ou use sua conta</p>
             <div class="formulario">
                 <form>
-                    <input required type="email" placeholder="E-mail">
+                    <input required type="email" placeholder="E-mail" id="email">
                     <br>
                     <br>
-                    <input type="senha" placeholder="Senha">
+                    <input type="senha" placeholder="Senha" id="senha">
                 </form>
                 <br>
                 <p class="senha">Esqueceu sua senha?</p>
